--- a/config/development.yaml
+++ b/config/development.yaml
@@ -1,3 +1,5 @@
 app:
-  name: "project-name"
+  name: "cit-sk.ru"
   port: ":8000"
+  mongoEndpoint: "mongodb://10.127.130.213:27017"
+  mongoDB: "citsk"
